# user-node

./: .env.example  README.md  REFACTORING.md  cera_logo_rc.py  main.py  pyproject.toml
application/: container.py  download_service.py  upload_service.py
config/: settings.py
controllers/: page_controller.py  progress_bar.py
core/: erasure_params.py  paths.py  user_state.py
gui/: QtWaitingSpinner.py  cera.ui  cera_logo.qrc  ui.py
infrastructure/: filesystem.py  token_repository.py  transfer_repository.py
infrastructure/api/: cera_client.py  cera_client_dev.py
infrastructure/storage/: local_index.py
infrastructure/transfer/: shard_transfer.py
pages/: contract_details.py  login.py  upload_main.py
presentation/controllers/: page_controller.py  worker.py
presentation/pages/: contract_details.py  login.py  main.py  show_files.py  transition.py  upload_main.py
presentation/widgets/: progress_bar.py  qt_signals.py
utils/: __init__.py  app_config.py  audits.py  cera.py  dev_config.py  encryption.py  erasure_coding.py  file_handler.py  file_transfer_user.py  helper.py  local_storage.py
